--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,11 +9,15 @@
   {% if site.github.is_project_page %}
     <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
   {% endif %}
+
+  <h2>Conact Me</h2>
+  <p><i class="fa fa-skype fa-3x wow bounceIn animated" style="visibility: visible;"></i> {{ site.contact.skype }}</p>
+  <p><i class="fa fa-envelope-o fa-3x wow bounceIn animated" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s;"></i> {{ site.contact.email }}</p>
   <h2>Around the Web</h2>
   <p>
-    <a href="https://www.facebook.com/vishnu.jayadhevan" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-    <a href="http://stackoverflow.com/users/4840468/vishnu-jayan" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
-    <a href="https://www.quora.com/profile/Vishnu-Jayan-3" class="btn-social btn-outline"><i class="fa fa-fw fa-quora"></i></a>
-    <a href="https://www.linkedin.com/in/vishnujayadhevan" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+    <a href="{{ site.social.facebook }}" class="btn-social btn-outline"><i class="fa fa-2x  fa-facebook"></i></a>
+    <a href="{{ site.social.stackoverflow }}" class="btn-social btn-outline"><i class="fa fa-2x  fa-stack-overflow"></i></a>
+    <a href="{{ site.social.quara }}" class="btn-social btn-outline"><i class="fa fa-2x  fa-quora"></i></a>
+    <a href="{{site.social.linkedin }}" class="btn-social btn-outline"><i class="fa fa-2x  fa-linkedin"></i></a>
   </p>
 </aside>
