change the sidebar and config file

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Personal website of Vishnu Jayan">
 	  <meta name="keywords" content="Vishnu Jayan, Software Engineer, Wordpress tutoials, itsmevishnu, vishnujayan.in, learn wordpress, coding, angular js, learn, quick learner,Vishnu,vishnu,vishnu jayan,goal oriented,creative,young,software">
 	  <meta name="author" content="Vishnu Jayan">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
