change the sidebar and config file and css

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,8 @@
 ---
 
 @import 'jekyll-theme-architect';
+ul .list-inline {
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 5px;
+}
