--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,10 +27,16 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
         <h3>{{ site.subtitle}}</h3>
         {% if site.github.is_project_page %}
-          <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
+          <a href="{{ site.github.url }}" class="button"><small>View project on</small> GitHub</a>
         {% endif %}
         {% if site.github.is_user_page %}
-          <a href="{{ site.github.repository_url }}" class="button"><small>Follow me on</small> GitHub</a>
+          <a href="{{ site.github.url }}" class="button"><small>Follow me on</small> GitHub</a>
         {% endif %}
       </div>
     </header>
+    <div class="menu-bar">
+      <nav>
+        <a href="/aboutme" class="button"><i class="fa fa-fw fa-user-o"></i>About Me</a>
+        <a href="/blogs" class="button"><i class="fa fa-fw fa-briefcase"></i>Blogs</a>
+      </nav>
+    </div>
