--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,31 @@
 ---
 
 @import 'jekyll-theme-architect';
-ul .list-inline {
-  display: inline-block;
-  padding-left: 5px;
-  padding-right: 5px;
+/*Updated by Vishnu jayan for adding new features*/
+ul {
+    padding-left: 0px!important;}
+.list-inline > li{
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px; }
+.list-inline {
+    list-style: outside none none; }
+.menu-bar{
+  text-align: center;
+  padding-top: 10px;
+  margin: 10px;
+  padding-bottom: 10px;
+
+  nav a{
+    color:#2879d0;
+    border: 1px solid #2879d0;
+    padding: 10px;
+    margin-top:10px;
+    border-radius: 10px;
+
+  }
+  nav a:hover{
+    color:#fff;
+    background-color:#2879d0;
+  }
 }
