Change the css and main page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,3 +30,10 @@ ul {
     background-color:#2879d0;
   }
 }
+
+blockquote {
+    border: 1px solid #2879d0;
+    font-size: 1.6em;
+    padding: 10px;
+    border-radius: 10px;
+}
