--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>{{ site.title | site.description}} by Vishnu Jayan</title>
+    <title>{{ site.title}} | {{site.description}}</title>
   </head>
 
   <body>
