--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@
         <section id="main-content">
           <h1>{{page.title}}</h1>
           {{ content }}
+          {% include social.html %}
         </section>
 
       {% include sidebar.html %}
